--- a/benchmarks/data-lrat/pigeon-direct-data/Makefile
+++ b/benchmarks/data-lrat/pigeon-direct-data/Makefile
@@ -1,52 +1,66 @@
 INTERP = python3
 N = 4
 VLEVEL = 2
+SEED=123456
 
 GDIR=../../pigeon-code
 
 GENERATOR = $(GDIR)/pigeonhole
-
-EXTRACTOR = $(GDIR)/extract_lines.py PSEUDO
+RANDOMIZER = ../../randomizer.py
+EXDIR = ../../../extractor
+EXTRACTOR = $(EXDIR)/constraint_extractor.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
 CHECKER = ../../../lrat/lrat-check
 GRABBER = ../../grab_clauses.py
+EXTENSION = lrat
 
 hml: pigeon-direct-$(N)-hm-linear.data
 pml: pigeon-direct-$(N)-pm-linear.data
 hmb: pigeon-direct-$(N)-hm-bucket.data
 pmb: pigeon-direct-$(N)-pm-bucket.data
 pc: pigeon-direct-$(N)-constraint.data
+rpc: pigeon-direct-$(N)-constraint-randomorder.data
 
 pigeon-direct-$(N)-hm-bucket.data:
 	$(GENERATOR) -$(N) > pigeon-direct-$(N)-hm.cnf
-	$(SOLVER) -b -v $(VLEVEL) -i pigeon-direct-$(N)-hm.cnf -O pigeon-direct-$(N)-hm.lrat 2>&1 | tee pigeon-direct-$(N)-hm-bucket.data
-	$(CHECKER) pigeon-direct-$(N)-hm.cnf pigeon-direct-$(N)-hm.lrat | tee -a pigeon-direct-$(N)-hm-bucket.data
-	rm -f pigeon-direct-$(N)-hm.lrat
+	$(SOLVER) -b -v $(VLEVEL) -i pigeon-direct-$(N)-hm.cnf -O pigeon-direct-$(N)-hm.$(EXTENSION) 2>&1 | tee pigeon-direct-$(N)-hm-bucket.data
+	$(CHECKER) pigeon-direct-$(N)-hm.cnf pigeon-direct-$(N)-hm.$(EXTENSION) | tee -a pigeon-direct-$(N)-hm-bucket.data
+	rm -f pigeon-direct-$(N)-hm.$(EXTENSION)
 
 pigeon-direct-$(N)-pm-bucket.data:
 	$(GENERATOR) $(N) > pigeon-direct-$(N)-pm.cnf
-	$(SOLVER) -b -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -O pigeon-direct-$(N)-pm.lrat 2>&1 | tee pigeon-direct-$(N)-pm-bucket.data
-	$(CHECKER) pigeon-direct-$(N)-pm.cnf pigeon-direct-$(N)-pm.lrat | tee -a pigeon-direct-$(N)-pm-bucket.data
-	rm -f pigeon-direct-$(N)-pm.lrat
+	$(SOLVER) -b -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -O pigeon-direct-$(N)-pm.$(EXTENSION) 2>&1 | tee pigeon-direct-$(N)-pm-bucket.data
+	$(CHECKER) pigeon-direct-$(N)-pm.cnf pigeon-direct-$(N)-pm.$(EXTENSION) | tee -a pigeon-direct-$(N)-pm-bucket.data
+	rm -f pigeon-direct-$(N)-pm.$(EXTENSION)
 
 pigeon-direct-$(N)-hm-linear.data:
 	$(GENERATOR) -$(N) > pigeon-direct-$(N)-hm.cnf
-	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-hm.cnf -O pigeon-direct-$(N)-hm.lrat 2>&1 | tee pigeon-direct-$(N)-hm-linear.data
-	$(CHECKER) pigeon-direct-$(N)-hm.cnf pigeon-direct-$(N)-hm.lrat | tee -a pigeon-direct-$(N)-hm-linear.data
-	rm -f pigeon-direct-$(N)-hm.lrat
+	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-hm.cnf -O pigeon-direct-$(N)-hm.$(EXTENSION) 2>&1 | tee pigeon-direct-$(N)-hm-linear.data
+	$(CHECKER) pigeon-direct-$(N)-hm.cnf pigeon-direct-$(N)-hm.$(EXTENSION) | tee -a pigeon-direct-$(N)-hm-linear.data
+	rm -f pigeon-direct-$(N)-hm.$(EXTENSION)
 
 pigeon-direct-$(N)-pm-linear.data:
 	$(GENERATOR) $(N) > pigeon-direct-$(N)-pm.cnf
-	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -O pigeon-direct-$(N)-pm.lrat 2>&1 | tee pigeon-direct-$(N)-pm-linear.data
-	$(CHECKER) pigeon-direct-$(N)-pm.cnf pigeon-direct-$(N)-pm.lrat | tee -a pigeon-direct-$(N)-pm-linear.data
-	rm -f pigeon-direct-$(N)-pm.lrat
+	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-pm.cnf -O pigeon-direct-$(N)-pm.$(EXTENSION) 2>&1 | tee pigeon-direct-$(N)-pm-linear.data
+	$(CHECKER) pigeon-direct-$(N)-pm.cnf pigeon-direct-$(N)-pm.$(EXTENSION) | tee -a pigeon-direct-$(N)-pm-linear.data
+	rm -f pigeon-direct-$(N)-pm.$(EXTENSION)
 
 pigeon-direct-$(N)-constraint.data:
 	$(GENERATOR) -$(N) > pigeon-direct-$(N)-constraint.cnf
 	$(EXTRACTOR) < pigeon-direct-$(N)-constraint.cnf > pigeon-direct-$(N)-constraint.schedule
-	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-constraint.cnf -o pigeon-direct-$(N)-constraint.lrat -s pigeon-direct-$(N)-constraint.schedule 2>&1 | tee pigeon-direct-$(N)-constraint.data
-	$(CHECKER) pigeon-direct-$(N)-constraint.cnf pigeon-direct-$(N)-constraint.lrat | tee -a pigeon-direct-$(N)-constraint.data
-	rm -f pigeon-direct-$(N)-constraint.lrat
+	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-constraint.cnf -o pigeon-direct-$(N)-constraint.$(EXTENSION) -s pigeon-direct-$(N)-constraint.schedule 2>&1 | tee pigeon-direct-$(N)-constraint.data
+	$(CHECKER) pigeon-direct-$(N)-constraint.cnf pigeon-direct-$(N)-constraint.$(EXTENSION) | tee -a pigeon-direct-$(N)-constraint.data
+	rm -f pigeon-direct-$(N)-constraint.$(EXTENSION)
+
+pigeon-direct-$(N)-constraint-randomorder.data:
+	$(GENERATOR) -$(N) > pigeon-direct-$(N)-constraint-randomorder.cnf
+	$(RANDOMIZER) pigeon-direct-$(N)-constraint-randomorder.cnf $(SEED)
+	$(EXTRACTOR) < pigeon-direct-$(N)-constraint-randomorder.cnf > pigeon-direct-$(N)-constraint-randomorder.schedule
+	$(SOLVER) -v $(VLEVEL) -i pigeon-direct-$(N)-constraint-randomorder.cnf -o pigeon-direct-$(N)-constraint-randomorder.$(EXTENSION) \
+		-p pigeon-direct-$(N)-constraint-randomorder.order \
+		-s pigeon-direct-$(N)-constraint-randomorder.schedule 2>&1 | tee pigeon-direct-$(N)-constraint-randomorder.data
+	$(CHECKER) pigeon-direct-$(N)-constraint-randomorder.cnf pigeon-direct-$(N)-constraint-randomorder.$(EXTENSION) | tee -a pigeon-direct-$(N)-constraint-randomorder.data
+	rm -f pigeon-direct-$(N)-constraint-randomorder.$(EXTENSION)
 
 
 data:
@@ -59,7 +73,7 @@ data:
 
 
 clean:
-	rm -f *.lrat *.cnf
+	rm -f *.lrat *.lratb *.cnf
 
 superclean: clean
 	rm -f *.data
