Regularized names.  Added auto detection

--- a/benchmarks/data-lrat/chess-data/Makefile
+++ b/benchmarks/data-lrat/chess-data/Makefile
@@ -2,7 +2,6 @@ INTERP = python3
 N = 10
 VLEVEL = 1
 SEED=123456
-MOD=3
 
 GENERATOR = $(INTERP) ../../chess.py
 RANDOMIZER = ../../randomizer.py
@@ -11,7 +10,7 @@ EXTRACTOR = $(EXDIR)/constraint_extractor.py
 SOLVER = $(INTERP) ../../../prototype/solver.py
 CHECKER = ../../../lrat/lrat-check
 GRABBER = ../../grab_clauses.py
-EXTENSION = lratb
+EXTENSION = lrat
 
 q: chess-$(N)-column.data
 
@@ -19,13 +18,17 @@ rq: chess-$(N)-column-randomorder.data
 
 nq: chess-$(N)-noquant.data
 
-e: chess-$(N)-equation.data
+e3: chess-$(N)-equation-mod3.data
 
-ie: chess-$(N)-equation-integer.data
+ea: chess-$(N)-equation-auto.data
 
-re: chess-$(N)-equation-randomorder.data
+ei: chess-$(N)-equation-integer.data
 
-rie: chess-$(N)-equation-integer-randomorder.data
+re3: chess-$(N)-equation-mod3-randomorder.data
+
+re3: chess-$(N)-equation-auto-randomorder.data
+
+rei: chess-$(N)-equation-integer-randomorder.data
 
 c: chess-$(N)-constraint.data
 
@@ -54,36 +57,53 @@ chess-$(N)-column-randomorder.data:
 	$(CHECKER) chess-$(N)-column-randomorder.cnf chess-$(N)-column-randomorder.$(EXTENSION) | tee -a chess-$(N)-column-randomorder.data
 	rm -f chess-$(N)-column-randomorder.$(EXTENSION)
 
-chess-$(N)-equation.data:
-	$(GENERATOR) -C -n $(N) -r chess-$(N)-equation -p e | tee chess-$(N)-equation.data
-	$(EXTRACTOR) -i chess-$(N)-equation.cnf -o chess-$(N)-equation.schedule -v 2 | tee -a chess-$(N)-equation.data
-	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation.cnf -s chess-$(N)-equation.schedule -m $(MOD) \
-		-o chess-$(N)-equation.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation.data
-	$(CHECKER) chess-$(N)-equation.cnf chess-$(N)-equation.$(EXTENSION) | tee -a chess-$(N)-equation.data
-	rm -f chess-$(N)-equation.$(EXTENSION)
+chess-$(N)-equation-mod3.data:
+	$(GENERATOR) -C -n $(N) -r chess-$(N)-equation-mod3 -p e | tee chess-$(N)-equation-mod3.data
+	$(EXTRACTOR) -i chess-$(N)-equation-mod3.cnf -o chess-$(N)-equation-mod3.schedule -v 2 | tee -a chess-$(N)-equation-mod3.data
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-mod3.cnf -s chess-$(N)-equation-mod3.schedule -m 3 \
+		-o chess-$(N)-equation-mod3.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-mod3.data
+	$(CHECKER) chess-$(N)-equation-mod3.cnf chess-$(N)-equation-mod3.$(EXTENSION) | tee -a chess-$(N)-equation-mod3.data
+	rm -f chess-$(N)-equation-mod3.$(EXTENSION)
+
+chess-$(N)-equation-auto.data:
+	$(GENERATOR) -C -n $(N) -r chess-$(N)-equation-auto -p e | tee chess-$(N)-equation-auto.data
+	$(EXTRACTOR) -i chess-$(N)-equation-auto.cnf -o chess-$(N)-equation-auto.schedule -v 2 | tee -a chess-$(N)-equation-auto.data
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-auto.cnf -s chess-$(N)-equation-auto.schedule -m a \
+		-o chess-$(N)-equation-auto.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-auto.data
+	$(CHECKER) chess-$(N)-equation-auto.cnf chess-$(N)-equation-auto.$(EXTENSION) | tee -a chess-$(N)-equation-auto.data
+	rm -f chess-$(N)-equation-auto.$(EXTENSION)
 
 chess-$(N)-equation-integer.data:
 	$(GENERATOR) -C -n $(N) -r chess-$(N)-equation-integer -p e | tee chess-$(N)-equation-integer.data
 	$(EXTRACTOR) -i chess-$(N)-equation-integer.cnf -o chess-$(N)-equation-integer.schedule -v 2 | tee -a chess-$(N)-equation-integer.data
-	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-integer.cnf -s chess-$(N)-equation-integer.schedule  \
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-integer.cnf -s chess-$(N)-equation-integer.schedule  -m i \
 		-o chess-$(N)-equation-integer.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-integer.data
 	$(CHECKER) chess-$(N)-equation-integer.cnf chess-$(N)-equation-integer.$(EXTENSION) | tee -a chess-$(N)-equation-integer.data
 	rm -f chess-$(N)-equation-integer.$(EXTENSION)
 
-chess-$(N)-equation-randomorder.data:
-	$(GENERATOR) -C -n $(N) -r chess-$(N)-equation-randomorder -p e | tee chess-$(N)-equation-randomorder.data
-	$(RANDOMIZER) chess-$(N)-equation-randomorder.cnf $(SEED)
-	$(EXTRACTOR) -i chess-$(N)-equation-randomorder.cnf -o chess-$(N)-equation-randomorder.schedule -v 2 | tee -a chess-$(N)-equation-randomorder.data
-	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-randomorder.cnf -s chess-$(N)-equation-randomorder.schedule -m $(MOD) \
-		-p chess-$(N)-equation-randomorder.order -o chess-$(N)-equation-randomorder.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-randomorder.data
-	$(CHECKER) chess-$(N)-equation-randomorder.cnf chess-$(N)-equation-randomorder.$(EXTENSION) | tee -a chess-$(N)-equation-randomorder.data
-	rm -f chess-$(N)-equation-randomorder.$(EXTENSION)
+chess-$(N)-equation-mod3-randomorder.data:
+	$(GENERATOR) -C -n $(N) -r chess-$(N)-equation-mod3-randomorder -p e | tee chess-$(N)-equation-mod3-randomorder.data
+	$(RANDOMIZER) chess-$(N)-equation-mod3-randomorder.cnf $(SEED)
+	$(EXTRACTOR) -i chess-$(N)-equation-mod3-randomorder.cnf -o chess-$(N)-equation-mod3-randomorder.schedule -v 2 | tee -a chess-$(N)-equation-mod3-randomorder.data
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-mod3-randomorder.cnf -s chess-$(N)-equation-mod3-randomorder.schedule -m 3 \
+		-p chess-$(N)-equation-mod3-randomorder.order -o chess-$(N)-equation-mod3-randomorder.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-mod3-randomorder.data
+	$(CHECKER) chess-$(N)-equation-mod3-randomorder.cnf chess-$(N)-equation-mod3-randomorder.$(EXTENSION) | tee -a chess-$(N)-equation-mod3-randomorder.data
+	rm -f chess-$(N)-equation-mod3-randomorder.$(EXTENSION)
+
+chess-$(N)-equation-auto-randomorder.data:
+	$(GENERATOR) -C -n $(N) -r chess-$(N)-equation-auto-randomorder -p e | tee chess-$(N)-equation-auto-randomorder.data
+	$(RANDOMIZER) chess-$(N)-equation-auto-randomorder.cnf $(SEED)
+	$(EXTRACTOR) -i chess-$(N)-equation-auto-randomorder.cnf -o chess-$(N)-equation-auto-randomorder.schedule -v 2 | tee -a chess-$(N)-equation-auto-randomorder.data
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-auto-randomorder.cnf -s chess-$(N)-equation-auto-randomorder.schedule -m a \
+		-p chess-$(N)-equation-auto-randomorder.order -o chess-$(N)-equation-auto-randomorder.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-auto-randomorder.data
+	$(CHECKER) chess-$(N)-equation-auto-randomorder.cnf chess-$(N)-equation-auto-randomorder.$(EXTENSION) | tee -a chess-$(N)-equation-auto-randomorder.data
+	rm -f chess-$(N)-equation-mod3-randomorder.$(EXTENSION)
 
 chess-$(N)-equation-integer-randomorder.data:
 	$(GENERATOR) -C -n $(N) -r chess-$(N)-equation-integer-randomorder -p e | tee chess-$(N)-equation-integer-randomorder.data
 	$(RANDOMIZER) chess-$(N)-equation-integer-randomorder.cnf $(SEED)
 	$(EXTRACTOR) -i chess-$(N)-equation-integer-randomorder.cnf -o chess-$(N)-equation-integer-randomorder.schedule -v 2 | tee -a chess-$(N)-equation-integer-randomorder.data
-	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-integer-randomorder.cnf -s chess-$(N)-equation-integer-randomorder.schedule \
+	$(SOLVER) -v $(VLEVEL) -i chess-$(N)-equation-integer-randomorder.cnf -s chess-$(N)-equation-integer-randomorder.schedule -m i \
 		-p chess-$(N)-equation-integer-randomorder.order -o chess-$(N)-equation-integer-randomorder.$(EXTENSION) 2>&1 | tee -a chess-$(N)-equation-integer-randomorder.data
 	$(CHECKER) chess-$(N)-equation-integer-randomorder.cnf chess-$(N)-equation-integer-randomorder.$(EXTENSION) | tee -a chess-$(N)-equation-integer-randomorder.data
 	rm -f chess-$(N)-equation-integer-randomorder.$(EXTENSION)
